--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 array2d = "0.3.0"
 itertools = "0.10.5"
 num = "0.4.0"
+ranges = "0.3.3"
 serde = { version = "1.0.150", features = ["derive"] }
 serde_json = "1.0.89"
 sscanf = "0.4.0"
