--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 array2d = "0.3.0"
+enum-iterator = "1.3.0"
 itertools = "0.10.5"
 num = "0.4.0"
 ranges = "0.3.3"
