--- a/2023/Cargo.toml
+++ b/2023/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+enum-iterator = "1.4.1"
 itertools = "0.12.0"
 nom = "7.1.3"
